2012-02-05  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Configuration Variables), tp/Texinfo/Common.pm,
	tp/Texinfo/Convert/HTML.pm(_convert_image_command), 
	tp/Texinfo/Convert/Converter.pm(%all_converters_defaults): new 
	configuration variable to prepend a path to images in HTML,
	IMAGE_LINK_PREFIX.  Report from Vincent Bela\"iche.

2012-01-28  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Configuration Variables): RAW_TEXT becomes RAWTEXT.
	TEXI2HTML is now a normal configuration variable.
	Configuration variables for program behavior may also be set normally,
	however they will have an effect only if set on the command line.
	* tp/TODO, tp/texi2any.pl, tp/Texinfo/Common.pm,
	tp/Texinfo/Convert/HTML.pm (converter_defaults): handle configuration 
	variables for program behavior more like other variables and formats.

2012-01-27  Patrice Dumas  <pertusus@free.fr>

	* configure.ac (AC_CONFIG_FILES), tp/tests/encodings, 
	tp/tests/formatting/: tests in encodings that have not be moved
	to the main test suite are moved to tp/tests/formatting.

2012-01-25  Patrice Dumas  <pertusus@free.fr>

	* util/texi2html: new script to convert Texinfo to HTML, setting the 
	default style to be the texi2html style.

2012-01-24  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm, tp/Texinfo/Convert/Unicode.pm,
	tp/Texinfo/Convert/XML.pm, util/texinfo.dtd: ` becomes ' in plaintext
	to follow the GNU coding standards change.  ` and ' are translated
	to unicode characters in XML and when @documentencoding is utf-8 and
	enable-encoding is set.

2012-01-22  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/HTML.pm (_convert_xref_commands), 
	tp/Texinfo/Convert/DocBook.pm:
	implement the new convention for five-arg xref with either 
	just Top or no node name.
	* tp/Texinfo/Convert/HTML.pm, texi2any.pl, tp/Texinfo/Common.pm:
	For HTML, add a customization variable, KEEP_TOP_EXTERNAL_REF.