@@ -138,7 +138,7 @@ my @obsolete_variables = ('TOP_HEADING_AT_BEGINNING', 'USE_SECTIONS',
 my @variable_settables_not_used = ('COMPLETE_IMAGE_PATHS', 'TOC_FILE');
 
 my @formats_settable = (
-  'DEBUGCOUNT', 'DEBUGTREE', 'RAWTEXT', 'TEXTCONTENT'
+  'DEBUGCOUNT', 'DEBUGTREE', 'RAWTEXT', 'TEXTCONTENT', 'PLAINTEXINFO'
 );
 
 my @variable_settables = (
@@ -176,16 +176,16 @@ my @variable_settables = (
   'FOOTNOTE_END_HEADER_LEVEL', 'FOOTNOTE_SEPARATE_HEADER_LEVEL',
   'USE_UP_NODE_FOR_ELEMENT_UP',
   'BEFORE_OVERVIEW', 'AFTER_OVERVIEW',
-  'BEFORE_TOC_LINES', 'AFTER_TOC_LINES', 
+  'BEFORE_TOC_LINES', 'AFTER_TOC_LINES',
   'SORT_ELEMENT_COUNT', 'SORT_ELEMENT_COUNT_WORDS',
   'KEEP_TOP_EXTERNAL_REF',
-  'TEXI2HTML', 'IMAGE_LINK_PREFIX',
+  'TEXI2HTML', 'IMAGE_LINK_PREFIX', 'FIX_TEXINFO',
 # FIXME document
   'TEXTCONTENT_COMMENT',
 # FIXME Not strings. To be documented.
   'LINKS_BUTTONS', 'TOP_BUTTONS', 'SECTION_BUTTONS', 'BUTTONS_TEXT',
   'BUTTONS_ACCESSKEY', 'BUTTONS_REL', 'BUTTONS_GOTO',
-  'CHAPTER_FOOTER_BUTTONS', 'SECTION_FOOTER_BUTTONS', 
+  'CHAPTER_FOOTER_BUTTONS', 'SECTION_FOOTER_BUTTONS',
   'NODE_FOOTER_BUTTONS',
   'MISC_BUTTONS', 'CHAPTER_BUTTONS', 'BUTTONS_NAME',
   'BUTTONS_EXAMPLE', 'SPECIAL_ELEMENTS_NAME', 'SPECIAL_ELEMENTS_CLASS',
